lagt ut i iframe

--- a/css/cssConsole.css
+++ b/css/cssConsole.css
@@ -13,7 +13,7 @@ border:1px solid #fefefe;
 float: left;
 color:white;
 }
-#inputConsole {
+#input {
 width: 550px;
 display:inline-block;
 position:relative;
